# customs-chatbot

./: .gitignore  README.md  customs_knowledge_base.txt
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  rag_service.py
backend/data/: customs_knowledge_base.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
